--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
 qwen_vl_utils
-#git+https://github.com/huggingface/transformers
 accelerate
-
 torch-snippets
 pandas
 numpy
-
-
-torch
-transformers
 streamlit
-pillow
-pandas
-openai
-google-auth
+torch>=1.7.0
+transformers
+Pillow
+requests
+loguru
+torchvision
+
+#python-bidi
+#pyclipper
