--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 qwen_vl_utils
 accelerate
-torch-snippets
+torch-snippets[torch,pdf]
 pandas
 numpy
 streamlit
-torch>=1.7.0
+#torch>=1.7.0
 transformers
 Pillow
 requests
